# vidhisa-49m-dev

./: .env.example  .gitignore  CLAUDE.md  Makefile  PDPA-CHECKLIST.md  README.md  SECURITY-AUDIT.md  SECURITY-REVIEW.md  docker-compose.prd.yml  docker-compose.yml  pr.md  skills-lock.json
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: backup-db-weekly.yml  backup-db.yml  deploy-gcp.yml  docker-build.yml  (+8 more)
scripts/: restore-ggs-urls.py
server/: .gitignore  README.md  main.tf  terraform.tfvars.example
services/: .dockerignore
services/api/: Dockerfile-prd  compose.yaml  pyproject.toml  requirements-test.txt  requirements.txt
services/api/app/: anti_fraud.py  auth.py  branch_auth.py  config.py  database.py  email_service.py  events.py  main.py  models.py  schemas.py
services/api/app/routers/: auth.py  branch.py  branch_view.py  branches.py  enrollments.py  feed.py  ggs.py  leaderboard.py  markers.py  organizations.py  participants.py  projection.py  records.py  sse.py  stats.py
services/api/tests/: conftest.py  test_admin_flow.py  test_branch.py  test_branch_view.py  test_branches.py  test_edge_cases.py  test_feed.py  test_health.py  test_leaderboard.py  test_markers.py  test_organizations.py  test_participants.py  test_projection.py  test_records.py  test_records_extended.py  test_sse.py  test_stats.py
spec/: api-spec.md  branch-view-api-spec.md  data-spec.md  db-diagram.md  prototype-spec.md
(+84 files in other folders)
